--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
             android:fontFamily="sans-serif-condensed"
             android:text="Sunday, 21 April 2007 | 7:54PM"
             android:textSize="16sp"
+            android:layout_marginTop="2dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,10 +51,10 @@
             android:id="@+id/linear1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginEnd="270dp"
+            android:layout_marginEnd="240dp"
             android:orientation="vertical"
-            android:padding="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingVertical="24dp"
+            android:paddingStart="34dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/date">
 
@@ -111,33 +112,136 @@
         </LinearLayout>
 
 
+
+
+        <!-- 4________Температура_________-->
+        <TextView
+            android:id="@+id/temp"
+            style="@style/weather_info"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
+            android:text="25"
+            android:textSize="50sp"
+            app:layout_constraintEnd_toStartOf="@id/country_city"
+            app:layout_constraintStart_toEndOf="@id/linear1"
+            app:layout_constraintTop_toBottomOf="@id/date" />
+
+        <TextView
+            android:id="@+id/temp_celsius"
+            style="@style/weather_info_hint"
+            android:paddingTop="8dp"
+            android:text="°С"
+            android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@id/temp"
+            app:layout_constraintTop_toTopOf="@id/temp" />
+
+
+        <!-- 5________Температура_________-->
+        <TextView
+            android:id="@+id/expected_temp"
+            style="@style/weather_info_hint"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:text="35°C↑\n16°C↓"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/temp_celsius"
+            app:layout_constraintTop_toTopOf="@id/temp_celsius" />
+
+
         <LinearLayout
             android:id="@+id/linear2"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="124dp"
             android:orientation="vertical"
-            android:padding="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/linear1"
             app:layout_constraintStart_toEndOf="@id/linear1"
-            app:layout_constraintTop_toBottomOf="@id/date">
+            app:layout_constraintEnd_toStartOf="@id/linear3"
+            android:paddingStart="8dp"
+            app:layout_constraintTop_toBottomOf="@id/temp">
 
-            <TextView
-                android:id="@+id/temperature"
-                style="@style/weather_info"
-                android:text="25"
-                android:textSize="50sp" />
-            <TextView
-                android:id="@+id/temperature_number"
-                style="@style/weather_info_hint"
-                android:textSize="24sp"
-                android:text="°С"/>
-            <!--                android:layout_marginBottom=""-->
 
+            <!-- 6________Давление_________-->
             <ImageView
                 android:id="@+id/pressure_img"
                 style="@style/weather_img"
-                android:src="@drawable/pressure" />
+                android:layout_marginStart="24dp"
+                android:src="@drawable/pressure"/>
+            <TextView
+                android:id="@+id/pressure_power"
+                style="@style/weather_info"
+                android:text="1,665mBar"/>
+            <TextView
+                android:id="@+id/pressure"
+                style="@style/weather_info_hint"
+                android:text="Pressure"
+                android:layout_marginStart="12dp"/>
+
+
+            <!-- 7________Закат_________-->
+            <ImageView
+                android:id="@+id/sunset_img"
+                style="@style/weather_img"
+                android:src="@drawable/sunset"
+                android:layout_marginStart="24dp"/>
+            <TextView
+                android:id="@+id/sunset_time"
+                style="@style/weather_info"
+                android:text="4:59PM"
+                android:layout_marginStart="8dp"/>
+            <TextView
+                android:id="@+id/sunset"
+                style="@style/weather_info_hint"
+                android:text="Sunset"
+                android:layout_marginStart="16dp"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/linear3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@id/linear1"
+            app:layout_constraintStart_toEndOf="@id/linear2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/temp">
+
+
+            <!-- 8________Ветер_________-->
+            <ImageView
+                android:id="@+id/wind_img"
+                style="@style/weather_img"
+                android:src="@drawable/wind"
+                android:layout_marginStart="36dp"/>
+            <TextView
+                android:id="@+id/wind_power"
+                style="@style/weather_info"
+                android:text="17 km/h"
+                android:layout_marginStart="20dp"/>
+            <TextView
+                android:id="@+id/wind"
+                style="@style/weather_info_hint"
+                android:text="Wind"
+                android:layout_marginStart="36dp"/>
+
+
+            <!-- 9________Текущее Время_________-->
+            <ImageView
+                android:id="@+id/day_time_img"
+                style="@style/weather_img"
+                android:src="@drawable/current_time"
+                android:layout_marginStart="36dp"/>
+            <TextView
+                android:id="@+id/day_time_time"
+                style="@style/weather_info"
+                android:text="21h 1m"
+                android:layout_marginStart="20dp"/>
+            <TextView
+                android:id="@+id/day_time"
+                style="@style/weather_info_hint"
+                android:text="Daytime"
+                android:layout_marginStart="24dp"/>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
