--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,247 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.InfoFragment">
-
-    <ImageView
-        android:id="@+id/light_outside"
-        android:layout_width="0dp"
-        android:layout_height="280dp"
-        android:src="@drawable/graphic"
-        app:layout_constraintBottom_toTopOf="@id/container"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/container"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/light_outside">
-
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed"
-            android:text="Sunday, 21 April 2007 | 7:54PM"
-            android:textSize="16sp"
-            android:layout_marginTop="2dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/country_city"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Switzerland, Geneva"
-            android:textColor="@color/sky_blue"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <LinearLayout
-            android:id="@+id/linear1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginEnd="240dp"
-            android:orientation="vertical"
-            android:paddingVertical="24dp"
-            android:paddingStart="34dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/date">
-
-
-            <!--1________Облачность_________-->
-            <ImageView
-                android:id="@+id/weather_img"
-                android:layout_width="40dp"
-                android:layout_height="26dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="12dp"
-                android:src="@drawable/cloudiness" />
-
-            <TextView
-                android:id="@+id/weather"
-                style="@style/weather_info"
-                android:text="Cloudy"
-                android:textSize="18sp" />
-
-
-            <!-- 2________Влажность_________-->
-            <ImageView
-                android:id="@+id/humidity_img"
-                style="@style/weather_img"
-                android:src="@drawable/drop_with_wind" />
-
-            <TextView
-                android:id="@+id/humidity_number"
-                style="@style/weather_info"
-                android:layout_marginStart="12dp"
-                android:text="45%" />
-
-            <TextView
-                android:id="@+id/humidity"
-                style="@style/weather_info_hint"
-                android:text="Humidity" />
-
-
-            <!-- 3________Восход_________-->
-            <ImageView
-                android:id="@+id/sunrise_img"
-                style="@style/weather_img"
-                android:src="@drawable/sunrise" />
-
-            <TextView
-                android:id="@+id/sunrise_time"
-                style="@style/weather_info"
-                android:text="3:25 AM" />
-
-            <TextView
-                android:id="@+id/sunrise"
-                style="@style/weather_info_hint"
-                android:layout_marginStart="6dp"
-                android:text="Sunrise" />
-        </LinearLayout>
-
-
-
-
-        <!-- 4________Температура_________-->
-        <TextView
-            android:id="@+id/temp"
-            style="@style/weather_info"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="20dp"
-            android:text="25"
-            android:textSize="50sp"
-            app:layout_constraintEnd_toStartOf="@id/country_city"
-            app:layout_constraintStart_toEndOf="@id/linear1"
-            app:layout_constraintTop_toBottomOf="@id/date" />
-
-        <TextView
-            android:id="@+id/temp_celsius"
-            style="@style/weather_info_hint"
-            android:paddingTop="8dp"
-            android:text="°С"
-            android:textSize="24sp"
-            app:layout_constraintStart_toEndOf="@id/temp"
-            app:layout_constraintTop_toTopOf="@id/temp" />
-
-
-        <!-- 5________Температура_________-->
-        <TextView
-            android:id="@+id/expected_temp"
-            style="@style/weather_info_hint"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:text="35°C↑\n16°C↓"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/temp_celsius"
-            app:layout_constraintTop_toTopOf="@id/temp_celsius" />
-
-
-        <LinearLayout
-            android:id="@+id/linear2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="@id/linear1"
-            app:layout_constraintStart_toEndOf="@id/linear1"
-            app:layout_constraintEnd_toStartOf="@id/linear3"
-            android:paddingStart="8dp"
-            app:layout_constraintTop_toBottomOf="@id/temp">
-
-
-            <!-- 6________Давление_________-->
-            <ImageView
-                android:id="@+id/pressure_img"
-                style="@style/weather_img"
-                android:layout_marginStart="24dp"
-                android:src="@drawable/pressure"/>
-            <TextView
-                android:id="@+id/pressure_power"
-                style="@style/weather_info"
-                android:text="1,665mBar"/>
-            <TextView
-                android:id="@+id/pressure"
-                style="@style/weather_info_hint"
-                android:text="Pressure"
-                android:layout_marginStart="12dp"/>
-
-
-            <!-- 7________Закат_________-->
-            <ImageView
-                android:id="@+id/sunset_img"
-                style="@style/weather_img"
-                android:src="@drawable/sunset"
-                android:layout_marginStart="24dp"/>
-            <TextView
-                android:id="@+id/sunset_time"
-                style="@style/weather_info"
-                android:text="4:59PM"
-                android:layout_marginStart="8dp"/>
-            <TextView
-                android:id="@+id/sunset"
-                style="@style/weather_info_hint"
-                android:text="Sunset"
-                android:layout_marginStart="16dp"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/linear3"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="@id/linear1"
-            app:layout_constraintStart_toEndOf="@id/linear2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/temp">
-
-
-            <!-- 8________Ветер_________-->
-            <ImageView
-                android:id="@+id/wind_img"
-                style="@style/weather_img"
-                android:src="@drawable/wind"
-                android:layout_marginStart="36dp"/>
-            <TextView
-                android:id="@+id/wind_power"
-                style="@style/weather_info"
-                android:text="17 km/h"
-                android:layout_marginStart="20dp"/>
-            <TextView
-                android:id="@+id/wind"
-                style="@style/weather_info_hint"
-                android:text="Wind"
-                android:layout_marginStart="36dp"/>
-
-
-            <!-- 9________Текущее Время_________-->
-            <ImageView
-                android:id="@+id/day_time_img"
-                style="@style/weather_img"
-                android:src="@drawable/current_time"
-                android:layout_marginStart="36dp"/>
-            <TextView
-                android:id="@+id/day_time_time"
-                style="@style/weather_info"
-                android:text="21h 1m"
-                android:layout_marginStart="20dp"/>
-            <TextView
-                android:id="@+id/day_time"
-                style="@style/weather_info_hint"
-                android:text="Daytime"
-                android:layout_marginStart="24dp"/>
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/nav_graph"
+        app:defaultNavHost="true"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
