--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -8,8 +8,9 @@
 
     <ImageView
         android:id="@+id/light_outside"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="280dp"
+        android:src="@drawable/day_light"
         app:layout_constraintBottom_toTopOf="@id/container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +32,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:text="Sunday, 21 April 2007 | 7:54PM"
-            android:textSize="18sp"
+            android:textSize="16sp"
+            android:layout_marginTop="2dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,9 +44,205 @@
             android:text="Switzerland, Geneva"
             android:textColor="@color/sky_blue"
             android:textSize="18sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/linear1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginEnd="240dp"
+            android:orientation="vertical"
+            android:paddingVertical="24dp"
+            android:paddingStart="34dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/date">
+
+
+            <!--1________Облачность_________-->
+            <ImageView
+                android:id="@+id/weather_img"
+                android:layout_width="40dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="12dp"
+                android:src="@drawable/cloudiness" />
+
+            <TextView
+                android:id="@+id/weather"
+                style="@style/weather_info"
+                android:text="Cloudy"
+                android:textSize="18sp" />
+
+
+            <!-- 2________Влажность_________-->
+            <ImageView
+                style="@style/weather_img"
+                android:src="@drawable/drop_with_wind" />
+
+            <TextView
+                android:id="@+id/humidity_number"
+                style="@style/weather_info"
+                android:layout_marginStart="12dp"
+                android:text="45%" />
+
+            <TextView
+                style="@style/weather_info_hint"
+                android:text="Humidity" />
+
+
+            <!-- 3________Восход_________-->
+            <ImageView
+                style="@style/weather_img"
+                android:src="@drawable/sunrise" />
+
+            <TextView
+                android:id="@+id/sunrise_time"
+                style="@style/weather_info"
+                android:text="3:25 AM" />
+
+            <TextView
+                style="@style/weather_info_hint"
+                android:layout_marginStart="6dp"
+                android:text="Sunrise" />
+        </LinearLayout>
+
+
+
+
+        <!-- 4________Температура_________-->
+        <TextView
+            android:id="@+id/temp"
+            style="@style/weather_info"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
+            android:text="25"
+            android:textSize="50sp"
+            app:layout_constraintEnd_toStartOf="@id/country_city"
+            app:layout_constraintStart_toEndOf="@id/linear1"
+            app:layout_constraintTop_toBottomOf="@id/date" />
+
+        <TextView
+            android:id="@+id/temp_celsius"
+            style="@style/weather_info_hint"
+            android:paddingTop="8dp"
+            android:text="°С"
+            android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@id/temp"
+            app:layout_constraintTop_toTopOf="@id/temp" />
+
+
+        <!-- 5________Температура_________-->
+        <TextView
+            android:id="@+id/expected_temp"
+            style="@style/weather_info_hint"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:text="35°C↑\n16°C↓"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/temp_celsius"
+            app:layout_constraintTop_toTopOf="@id/temp_celsius" />
+
+
+        <LinearLayout
+            android:id="@+id/linear2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@id/linear1"
+            app:layout_constraintStart_toEndOf="@id/linear1"
+            app:layout_constraintEnd_toStartOf="@id/linear3"
+            android:paddingStart="8dp"
+            app:layout_constraintTop_toBottomOf="@id/temp">
+
+
+            <!-- 6________Давление_________-->
+            <ImageView
+                style="@style/weather_img"
+                android:layout_marginStart="24dp"
+                android:src="@drawable/pressure"/>
+            <TextView
+                android:id="@+id/pressure_power"
+                style="@style/weather_info"
+                android:text="1,665mBar"/>
+            <TextView
+                style="@style/weather_info_hint"
+                android:text="Pressure"
+                android:layout_marginStart="12dp"/>
+
+
+            <!-- 7________Закат_________-->
+            <ImageView
+                style="@style/weather_img"
+                android:src="@drawable/sunset"
+                android:layout_marginStart="24dp"/>
+            <TextView
+                android:id="@+id/sunset_time"
+                style="@style/weather_info"
+                android:text="4:59PM"
+                android:layout_marginStart="8dp"/>
+            <TextView
+                style="@style/weather_info_hint"
+                android:text="Sunset"
+                android:layout_marginStart="16dp"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/linear3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@id/linear1"
+            app:layout_constraintStart_toEndOf="@id/linear2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/temp">
+
+
+            <!-- 8________Ветер_________-->
+            <ImageView
+                style="@style/weather_img"
+                android:src="@drawable/wind"
+                android:layout_marginStart="36dp"/>
+            <TextView
+                android:id="@+id/wind_power"
+                style="@style/weather_info"
+                android:text="17 km/h"
+                android:layout_marginStart="20dp"/>
+            <TextView
+                style="@style/weather_info_hint"
+                android:text="Wind"
+                android:layout_marginStart="36dp"/>
+
+
+            <!-- 9________Текущее Время_________-->
+            <ImageView
+                style="@style/weather_img"
+                android:src="@drawable/current_time"
+                android:layout_marginStart="36dp"/>
+            <TextView
+                android:id="@+id/day_time_time"
+                style="@style/weather_info"
+                android:text="21h 1m"
+                android:layout_marginStart="20dp"/>
+            <TextView
+                style="@style/weather_info_hint"
+                android:text="Daytime"
+                android:layout_marginStart="24dp"/>
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
