--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.InfoFragment">
+    tools:context=".ui.WeatherFragment">
 
     <ImageView
         android:id="@+id/light_outside"
         android:layout_width="0dp"
         android:layout_height="280dp"
         android:src="@drawable/day_light"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@id/container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
