--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
-    app:startDestination="@id/mainActivity">
+    app:startDestination="@id/weatherFragment">
 
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="kg.geektech.weatherapp.MainActivity"
-        android:label="MainActivity" />
+    <fragment
+        android:id="@+id/weatherFragment"
+        android:name="kg.geektech.weatherapp.ui.WeatherFragment"
+        android:label="fragment_weather"
+        tools:layout="@layout/fragment_weather" />
 </navigation>
