--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,32 @@
         android:id="@+id/weatherFragment"
         android:name="kg.geektech.weatherapp.ui.WeatherFragment"
         android:label="fragment_weather"
-        tools:layout="@layout/fragment_weather" />
+        tools:layout="@layout/fragment_weather">
+        <action
+            android:id="@+id/action_weatherFragment_to_countryCityFragment"
+            app:destination="@id/countryCityFragment" />
+        <argument
+            android:name="city"
+            android:defaultValue="Bishkek"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/countryCityFragment"
+        android:name="kg.geektech.weatherapp.ui.CountryCityFragment"
+        android:label="fragment_country_city"
+        tools:layout="@layout/fragment_country_city">
+        <action
+            android:id="@+id/action_countryCityFragment_to_weatherFragment"
+            app:destination="@id/weatherFragment" />
+        <argument
+            android:name="city"
+            android:defaultValue="Bishkek"
+            app:argType="string"
+            app:nullable="true" />
+        <action
+            android:id="@+id/action_countryCityFragment_to_weatherFragment2"
+            app:destination="@id/weatherFragment" />
+    </fragment>
 </navigation>
